Bug 776747 - Talos Regression :( SVG, Opacity Row Major increase 4.54%. r=roc.