content/svg/content/src/nsSVGElement.h
@@ -222,6 +222,16 @@ public:
   void DidAnimateTransformList();
   void DidAnimateString(PRUint8 aAttrEnum);
 
+  enum {
+    /**
+     * Flag to indicate to GetAnimatedXxx() methods that the object being
+     * requested should be allocated if it hasn't already been allocated, and
+     * that the method should not return null. Only applicable to methods that
+     * need to allocate the object that they return.
+     */
+    DO_ALLOCATE = 0x1
+  };
+
   nsSVGLength2* GetAnimatedLength(const nsIAtom *aAttrName);
   void GetAnimatedLengthValues(float *aFirst, ...);
   void GetAnimatedNumberValues(float *aFirst, ...);
@@ -240,9 +250,20 @@ public:
     // NS_DECL_NSIDOMSVGANIMATEDPATHDATA.
     return nsnull;
   }
-  // Despite the fact that animated transform lists are used for a variety of
-  // attributes, no SVG element uses more than one.
-  virtual SVGAnimatedTransformList* GetAnimatedTransformList() {
+  /**
+   * Get the SVGAnimatedTransformList for this element.
+   *
+   * Despite the fact that animated transform lists are used for a variety of
+   * attributes, no SVG element uses more than one.
+   *
+   * It's relatively uncommon for elements to have their transform attribute
+   * set, so to save memory the SVGAnimatedTransformList is not allocated until
+   * the attribute is set/animated or its DOM wrapper is created. Callers that
+   * require the SVGAnimatedTransformList to be allocated and for this method
+   * to return non-null must pass the DO_ALLOCATE flag.
+   */
+  virtual SVGAnimatedTransformList* GetAnimatedTransformList(
+                                                        PRUint32 aFlags = 0) {
     return nsnull;
   }
 
